--- a/website/templates/landing.html
+++ b/website/templates/landing.html
@@ -126,7 +126,7 @@
 </head>
 <body>
     <nav>
-        <a href="#" class="logo">ChatAnon</a>
+        <a href="#" class="logo">AM <small><em>by </em><b><a href="https://github.com/DavidNzube101">Skipp</a></b></small></a>
         <div class="nav-links">
             <a href="#">About</a>
             <a href="#">Safety</a>
@@ -139,7 +139,7 @@
         <h1 class="hero-text">anonymous chats<br>real connections</h1>
         
         <div class="welcome-card">
-            <p>Welcome to ChatAnon! Send and reply to messages anonymously. Connect with friends in a whole new way.</p>
+            <p>Welcome to AM! Send and reply to messages anonymously. Connect with friends in a whole new way.</p>
             <a href="/dashboard">
                 <button class="start-button">Get Started</button>
             </a>
